--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,15 @@ header button {
 header button:hover {
   background-color: black;
   color: white;
+  transition: 150ms;
 }
 
 body > div {
   display: grid;
   grid-template-rows: 250px;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-auto-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-auto-rows: 250px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-auto-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 30px;
   padding: 30px;
   background-color: var(--grey);
@@ -88,6 +89,60 @@ body > div > div > button {
   align-self: flex-end;
 }
 
-body > div > div > button:first-of-type {
+body > div > div > button:first-of-type.read {
   background-color: var(--green);
+}
+
+body > div > div > button:first-of-type.notRead {
+  background-color: var(--red);
+}
+
+.div-form {
+  height: 500px;
+  width: 350px;
+  background-color: white;
+  position: absolute;
+  z-index: 2;
+  top: calc(50vh - 250px);
+  left: calc(50vw - 175px);
+  border-radius: 10px;
+  justify-content: space-between;
+  flex-direction: column;
+  box-shadow: 3px 3px 10px -8px black;
+  transition: 200ms;
+}
+
+.div-form h3 {
+  font-size: 26px;
+}
+
+form > div {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.pages_div,
+.read_div {
+  display: flex;
+  flex-direction: row;
+}
+
+.pages_div input {
+  width: 60px;
+  margin-right: 10px;
+}
+
+.read_div label {
+  margin-right: 10px;
+}
+
+.div-form button {
+  width: 100%;
+  font-size: 16px;
+  height: 40px;
+  border: 0;
+  border-radius: 3px;
+  background-color: black;
+  color: white;
 }
